CB-24628 Created readme sections about running externalized compute service from idea and command line.